@@ -20,6 +20,17 @@ begin_import
 import|import
 name|java
 operator|.
+name|nio
+operator|.
+name|charset
+operator|.
+name|StandardCharsets
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
 name|util
 operator|.
 name|ArrayList
@@ -340,6 +351,21 @@ name|common
 operator|.
 name|cloud
 operator|.
+name|ZkCmdExecutor
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|cloud
+operator|.
 name|ZkCoreNodeProps
 import|;
 end_import
@@ -568,19 +594,6 @@ operator|.
 name|slf4j
 operator|.
 name|LoggerFactory
-import|;
-end_import
-begin_import
-import|import static
-name|java
-operator|.
-name|nio
-operator|.
-name|charset
-operator|.
-name|StandardCharsets
-operator|.
-name|UTF_8
 import|;
 end_import
 begin_import
@@ -829,23 +842,6 @@ operator|.
 name|ZkStateReader
 operator|.
 name|COLLECTION_PROP
-import|;
-end_import
-begin_import
-import|import static
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|common
-operator|.
-name|cloud
-operator|.
-name|ZkStateReader
-operator|.
-name|CONFIGS_ZKNODE
 import|;
 end_import
 begin_import
@@ -1941,71 +1937,6 @@ name|asyncId
 argument_list|)
 return|;
 block|}
-DECL|method|createNodeIfNotExists
-specifier|public
-specifier|static
-name|void
-name|createNodeIfNotExists
-parameter_list|(
-name|SolrZkClient
-name|zk
-parameter_list|,
-name|String
-name|path
-parameter_list|,
-name|byte
-index|[]
-name|data
-parameter_list|)
-throws|throws
-name|KeeperException
-throws|,
-name|InterruptedException
-block|{
-if|if
-condition|(
-operator|!
-name|zk
-operator|.
-name|exists
-argument_list|(
-name|path
-argument_list|,
-literal|true
-argument_list|)
-condition|)
-block|{
-comment|//create the config znode
-try|try
-block|{
-name|zk
-operator|.
-name|create
-argument_list|(
-name|path
-argument_list|,
-name|data
-argument_list|,
-name|CreateMode
-operator|.
-name|PERSISTENT
-argument_list|,
-literal|true
-argument_list|)
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|KeeperException
-operator|.
-name|NodeExistsException
-name|e
-parameter_list|)
-block|{
-comment|//no problem . race condition. carry on the good work
-block|}
-block|}
-block|}
 DECL|method|copyPropertiesWithPrefix
 specifier|private
 specifier|static
@@ -2491,32 +2422,49 @@ operator|.
 name|getZkClient
 argument_list|()
 decl_stmt|;
-name|createNodeIfNotExists
+name|ZkCmdExecutor
+name|cmdExecutor
+init|=
+operator|new
+name|ZkCmdExecutor
 argument_list|(
 name|zk
-argument_list|,
+operator|.
+name|getZkClientTimeout
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|cmdExecutor
+operator|.
+name|ensureExists
+argument_list|(
+name|ZkStateReader
+operator|.
 name|CONFIGS_ZKNODE
 argument_list|,
-literal|null
+name|zk
 argument_list|)
 expr_stmt|;
-name|createNodeIfNotExists
+name|cmdExecutor
+operator|.
+name|ensureExists
 argument_list|(
-name|zk
-argument_list|,
+name|ZkStateReader
+operator|.
 name|CONFIGS_ZKNODE
 operator|+
 literal|"/"
 operator|+
 name|SYSTEM_COLL
 argument_list|,
-literal|null
+name|zk
 argument_list|)
 expr_stmt|;
-name|createNodeIfNotExists
-argument_list|(
-name|zk
-argument_list|,
+name|String
+name|path
+init|=
+name|ZkStateReader
+operator|.
 name|CONFIGS_ZKNODE
 operator|+
 literal|"/"
@@ -2524,7 +2472,11 @@ operator|+
 name|SYSTEM_COLL
 operator|+
 literal|"/schema.xml"
-argument_list|,
+decl_stmt|;
+name|byte
+index|[]
+name|data
+init|=
 name|BlobHandler
 operator|.
 name|SCHEMA
@@ -2538,14 +2490,30 @@ argument_list|)
 operator|.
 name|getBytes
 argument_list|(
+name|StandardCharsets
+operator|.
 name|UTF_8
 argument_list|)
+decl_stmt|;
+name|cmdExecutor
+operator|.
+name|ensureExists
+argument_list|(
+name|path
+argument_list|,
+name|data
+argument_list|,
+name|CreateMode
+operator|.
+name|PERSISTENT
+argument_list|,
+name|zk
 argument_list|)
 expr_stmt|;
-name|createNodeIfNotExists
-argument_list|(
-name|zk
-argument_list|,
+name|path
+operator|=
+name|ZkStateReader
+operator|.
 name|CONFIGS_ZKNODE
 operator|+
 literal|"/"
@@ -2553,7 +2521,9 @@ operator|+
 name|SYSTEM_COLL
 operator|+
 literal|"/solrconfig.xml"
-argument_list|,
+expr_stmt|;
+name|data
+operator|=
 name|BlobHandler
 operator|.
 name|CONF
@@ -2567,8 +2537,24 @@ argument_list|)
 operator|.
 name|getBytes
 argument_list|(
+name|StandardCharsets
+operator|.
 name|UTF_8
 argument_list|)
+expr_stmt|;
+name|cmdExecutor
+operator|.
+name|ensureExists
+argument_list|(
+name|path
+argument_list|,
+name|data
+argument_list|,
+name|CreateMode
+operator|.
+name|PERSISTENT
+argument_list|,
+name|zk
 argument_list|)
 expr_stmt|;
 block|}
