@@ -2007,6 +2007,79 @@ argument_list|()
 expr_stmt|;
 name|solrZkClientMock
 operator|.
+name|makePath
+argument_list|(
+name|anyObject
+argument_list|(
+name|String
+operator|.
+name|class
+argument_list|)
+argument_list|,
+name|anyObject
+argument_list|(
+name|byte
+index|[]
+operator|.
+expr|class
+argument_list|)
+argument_list|,
+name|anyObject
+argument_list|(
+name|CreateMode
+operator|.
+name|class
+argument_list|)
+argument_list|,
+name|anyBoolean
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|expectLastCall
+argument_list|()
+operator|.
+name|andAnswer
+argument_list|(
+operator|new
+name|IAnswer
+argument_list|<
+name|String
+argument_list|>
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|String
+name|answer
+parameter_list|()
+throws|throws
+name|Throwable
+block|{
+name|String
+name|key
+init|=
+operator|(
+name|String
+operator|)
+name|getCurrentArguments
+argument_list|()
+index|[
+literal|0
+index|]
+decl_stmt|;
+return|return
+name|key
+return|;
+block|}
+block|}
+argument_list|)
+operator|.
+name|anyTimes
+argument_list|()
+expr_stmt|;
+name|solrZkClientMock
+operator|.
 name|exists
 argument_list|(
 name|anyObject
